syntax = "proto3";

option csharp_namespace = "UserProfileServiceProvider";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package userprofile;

service UserProfileService {
  rpc CreateUserProfile (UserProfile) returns (UserProfileReply);
  rpc GetUserProfileById (RequestByUserId) returns (RequestByUserIdReply);
  rpc GetAllUserProfiles (google.protobuf.Empty) returns (Profiles);
  rpc UpdateUser (UserProfile) returns (UserProfileReply);
  rpc DeleteUser (RequestByUserId) returns (UserProfileReply);
}

message UserProfile {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone_number = 5;
  google.protobuf.StringValue address = 6;
  google.protobuf.StringValue postal_code = 7;
  google.protobuf.StringValue city = 8;
}

message UserProfileReply {
  int32 status_code = 1;
  string message = 2;
}

message RequestByUserId {
  string user_id = 1;
}

message RequestByUserIdReply {
  int32 status_code = 1;
  UserProfile profile = 2;
}

message Profiles {
  repeated UserProfile all_user_profiles = 1;
}
